initial colour pass and style changes; reorganised script

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <!-- Fixed header - logo on left, account button on right -->
     <header> 
       <img src="assets/brand/logo.png">
-      <button id="avatar-button"></button>
+      <button id="avatar-button"><i class="fa-regular fa-circle-user"></i></button>
     </header>
 
     <main>
