--- a/public/index.html
+++ b/public/index.html
@@ -145,8 +145,9 @@
 
     </main>
 
+
     <footer>
-      <p style="color:white">Tester</p>
+      <p>Tester</p>
     </footer>
   <!-- End grid container -->
   </div>
