--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,7 @@
             <h4> Type </h4>
           </div>
           <h1 class="activetaskmain-h1"> Task </h1>
+          <p id="activetaskmainh1-priority"> Priority </h1>
 
           <div id="activetaskmain-pomodoro" class="activetaskpanel-lvl2">
             <h2 class="activetaskmain-h2"> Timer </h2>
