pomodoro edit panel initial functionality

--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,9 @@
           <div id="activetaskmain-pomedit">
             <h3 class="activetaskpanel-h3"> Pomodoro </h3>
             <div class="activetaskpanel-lvl2"  id="activetaskmain-pomeditlist">
-              
+              <ul id="activetaskmainpomedit-entrypoint" role="listbox" aria-label="email list">
+                
+              </ul>
             </div>
           </div>
 
